[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/UI/PlayerHUD/PlayerHUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Player/Icons/icon_doux.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/PixelOperatorMonoHB.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/UI/HealthBar/HealthBar.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "score_increment"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 142, -36 ), Vector2( 142, -76 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "show_score_increment"
}, {
"args": [  ],
"method": "hide_score_increment"
} ]
}

[node name="PlayerHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 138.0
margin_bottom = 138.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="."]
margin_left = -16.0
margin_top = 80.0
margin_right = 48.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "P?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
margin_left = 12.0
margin_top = -17.0
margin_right = 156.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "SCORE: ??"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreIncrement" type="Label" parent="."]
visible = false
margin_left = 142.0
margin_top = -36.0
margin_right = 176.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 3 )
text = "+1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScoreIncrement"]
anims/score_increment = SubResource( 4 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = 40.0
margin_top = 110.0
margin_right = 94.0
margin_bottom = 128.0
rect_scale = Vector2( 2, 2 )

[node name="HurtTween" type="Tween" parent="."]
